Random fighter movement

--- a/IdleBattler Web/IdleBattler Razor Pages/IdleBattler Razor Pages.csproj
+++ b/IdleBattler Web/IdleBattler Razor Pages/IdleBattler Razor Pages.csproj
@@ -14,11 +14,16 @@
 
   <ItemGroup>
     <PackageReference Include="Blazor.Extensions.Canvas" Version="1.1.1" />
+    <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.9" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="6.0.10" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="wwwroot\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\IdleBattler Common\IdleBattler Common.csproj" />
   </ItemGroup>
 
 </Project>
