--- a/IdleBattler Server/IdleBattler Server.csproj
+++ b/IdleBattler Server/IdleBattler Server.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\IdleBattler Web\IdleBattler Common\IdleBattler Common.csproj" />
+  </ItemGroup>
+
 </Project>
