--- a/IdleBattler Web/IdleBattler Web/wwwroot/appsettings.json
+++ b/IdleBattler Web/IdleBattler Web/wwwroot/appsettings.json
@@ -2,5 +2,9 @@
   "Local": {
     "Authority": "https://login.microsoftonline.com/",
     "ClientId": "33333333-3333-3333-33333333333333333"
+  },
+  "ServerApi": {
+    "Url": "http://localhost:7156",
+    "GetMovements": "/arenamovement"
   }
 }
