--- a/IdleBattler Server/IdleBattler Server.csproj
+++ b/IdleBattler Server/IdleBattler Server.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.10" />
+    <PackageReference Include="Quartz.AspNetCore" Version="3.5.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
