--- a/IdleBattler Web/IdleBattler Razor Pages/IdleBattler Razor Pages.csproj
+++ b/IdleBattler Web/IdleBattler Razor Pages/IdleBattler Razor Pages.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="Blazor.Extensions.Canvas" Version="1.1.1" />
     <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.9" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="6.0.10" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="6.0.10" />
   </ItemGroup>
 
   <ItemGroup>
